--- a/data/cv/Papers/0RLDM.mdx
+++ b/data/cv/Papers/0RLDM.mdx
@@ -8,8 +8,8 @@ citation: "McGregor, S., Houtman, R., Montgomery, C., Metoyer, R., & Dietterich,
 paper: /static/papers/RLDM.pdf
 hide_tags: cv-tag-peer-reviewed cv-tag-conference cv-tag-talk cv-tag-poster cv-tag-application cv-tag-ml cv-tag-compsust cv-tag-rl cv-tag-visualization cv-tag-safety
 ---
-import {ReactIconTitle} from "components/Icons"
+import {ReactIconInline} from "components/Icons"
 
-<ReactIconTitle i="FaStar" />Best Paper Nomination
+<ReactIconInline i="FaStar" color="black" />Best Paper Nomination
 
 This work extends [Model-Free Monte Carlo](http://www.jmlr.org/proceedings/papers/v9/fonteneau10a/fonteneau10a.pdf) to large state space Markov Decision Processes (MDPs) by factoring the state space. We successfully generate surrogate trajectories for a large state space MDP (more than 10^1000000 states) with 8 state features. We posted an extended version of the paper to [arXiv](https://arxiv.org/abs/1703.09390).
