--- a/data/cv/Papers/hcaiworkshop_participation_interfaces.mdx
+++ b/data/cv/Papers/hcaiworkshop_participation_interfaces.mdx
@@ -10,4 +10,4 @@ hide_tags: cv-tag-conference cv-tag-workshop cv-tag-talk cv-tag-peer-reviewed cv
 ---
 **Abstract**
 
-> Emerging artificial intelligence (AI) applications often balance the preferences and impacts among diverse and contentious stakeholder groups. Accommodating these stakeholder groups during system design, development, and deployment requires tools for the elicitation of disparate system interests and collaboration interfaces supporting negotiation balancing those interests. This paper introduces interactive visual \"participation interfaces\" for Markov Decision Processes (MDPs) and collaborative ranking problems as examples restoring a human-centered locus of control.
+> Emerging artificial intelligence (AI) applications often balance the preferences and impacts among diverse and contentious stakeholder groups. Accommodating these stakeholder groups during system design, development, and deployment requires tools for the elicitation of disparate system interests and collaboration interfaces supporting negotiation balancing those interests. This paper introduces interactive visual "participation interfaces" for Markov Decision Processes (MDPs) and collaborative ranking problems as examples restoring a human-centered locus of control.
