--- a/data/cv/Presentations/0000_gcec.mdx
+++ b/data/cv/Presentations/0000_gcec.mdx
@@ -11,7 +11,7 @@ year: "2020"
 
 My contribution to this topic is the attached video, which had live follow up questions. It covers
 
-Part 1, *IBM Watson AI XPRIZE: High Stakes \"Academic Review\"*: Here I detailed the collaborative ranking method I developed for the IBM Watson AI XPRIZE. The method was successful in efficiently selecting the strongest set of candidate teams for advancement in the IBM Watson AI XPRIZE.
+Part 1, *IBM Watson AI XPRIZE: High Stakes "Academic Review"*: Here I detailed the collaborative ranking method I developed for the IBM Watson AI XPRIZE. The method was successful in efficiently selecting the strongest set of candidate teams for advancement in the IBM Watson AI XPRIZE.
 
 Part 2, *Inverting the Competition*: This section was forward looking and explored approaches to competing over the production of useful data rather than useful models. This work is still in the early stages.
 
