--- a/data/cv/Presentations/5_TA3M19.mdx
+++ b/data/cv/Presentations/5_TA3M19.mdx
@@ -11,4 +11,4 @@ This was an opportunity to present to a meetup group I founded several years ago
 
 **Abstract:** Companies and governments increasingly deploy intelligent systems to the real world. These systems--depending on the design and purpose--have the capacity to either greatly enhance the general well-being of the world or bring about some form of a science fiction dystopia.
 
-I will cover both aspects of these systems in equal measure. First, I will share examples of leading-edge \"AI for Good\" research. Then, I will guide us through some real-world harms caused by deployed AI systems as explored from the AI Incident Database now under development with the Partnership on AI. Sean will then wrap up the talk with a discussion of current opportunities and risks in the development of AI systems for the general welfare.
+I will cover both aspects of these systems in equal measure. First, I will share examples of leading-edge "AI for Good" research. Then, I will guide us through some real-world harms caused by deployed AI systems as explored from the AI Incident Database now under development with the Partnership on AI. Sean will then wrap up the talk with a discussion of current opportunities and risks in the development of AI systems for the general welfare.
