--- a/data/blog/my-ai-summer.mdx
+++ b/data/blog/my-ai-summer.mdx
@@ -3,7 +3,7 @@ title: "Year in Review: My 'AI Summer'"
 date: 2018-01-21 13:00
 category: Personal
 tags: ["AI", "United Nations", "PhD Defense", "Life", "Year in Review"]
-summary: \"AI winters\" follow when the hype backing artificial intelligence yields to the disappointment. Typically the purveyors of AI technologies are then banished until the next spectacular advance in computing capacity. This is _not_ a story about life during an AI winter. It is a story of my life in 2017, that could only be described as an AI _Summer_. But it didn't start out that way.
+summary: 'AI winters' follow when the hype backing artificial intelligence yields to the disappointment. Typically the purveyors of AI technologies are then banished until the next spectacular advance in computing capacity. This is _not_ a story about life during an AI winter. It is a story of my life in 2017, that could only be described as an AI _Summer_. But it didn't start out that way.
 icon: FaPlane
 ---
 
