--- a/data/cv/Papers/1SMAC.mdx
+++ b/data/cv/Papers/1SMAC.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Fast Optimization of Wildfire Suppression Policies with SMAC"
-citation: "This paper is currently under review. We invite you to cite the arXiv version of the paper."
+citation: "McGregor, Sean, et al. "Fast optimization of wildfire suppression policies with SMAC." arXiv preprint arXiv:1703.09391 (2017)."
 authors: McGregor, S., Houtman, R., Montgomery, C., Metoyer, R., & Dietterich, T. G.
 paper: https://arxiv.org/abs/1703.09391
 venue: arXiv
@@ -8,4 +8,4 @@ year: "2017"
 hide_tags: cv-tag-arxiv cv-tag-ml cv-tag-application cv-tag-compsust cv-tag-rl cv-tag-safety
 bibtex: "@ARTICLE{2017arXiv170309391M, author = {{McGregor}, S. and {Houtman}, R. and {Montgomery}, C. and {Metoyer}, R. and {Dietterich}, T.~G.},title = \"{Fast Optimization of Wildfire Suppression Policies with SMAC}\",journal = {ArXiv e-prints},archivePrefix = \"arXiv\",eprint = {1703.09391},primaryClass = \"cs.LG\",keywords = {Computer Science - Learning, Statistics - Machine Learning},year = 2017,month = mar,adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170309391M}}"
 ---
-This paper is the first application of random forests for direct policy search. Additionally, it is the first case of optimizing wildfire suppression policies across 100 year time spans. This is a standalone version of the paper incorporated into the book chapter, \"Connecting Conservation Research and Implementation: Building a Wildfire Assistant.\"
+This paper is the first application of random forests for direct policy search. Additionally, it is the first case of optimizing wildfire suppression policies across 100 year time spans. This is a standalone version of the paper incorporated into the book chapter, "Connecting Conservation Research and Implementation: Building a Wildfire Assistant."
