--- a/data/cv/Presentations/3_UCI19.md
+++ b/data/cv/Presentations/3_UCI19.md
@@ -3,6 +3,7 @@ authors: McGregor, S.
 venue: University of California, Irvine (graduate course on software testing)
 hide_tags: cv-tag-ml cv-tag-invited cv-tag-talk
 year: 2019
+citation: McGregor, S. (2019) Production Machine Learning Systems. Invited Talk at UC Irvine. Irvine, California.
 
 **Abstract:** Over the last half century, the field of software
 engineering has produced tools and techniques for efficiently
