--- a/data/cv/Service/AAAI20.mdx
+++ b/data/cv/Service/AAAI20.mdx
@@ -4,4 +4,4 @@ venue: Thirty-Fourth and Thirty-Fifth AAAI Conferences on Artificial Intelligenc
 year: "2019-2023"
 hide_tags: cv-tag-peer-reviewed cv-tag-application cv-tag-ml cv-tag-compsust cv-tag-workshop cv-tag-conference cv-tag-ethics cv-tag-safety
 ---
-I served on the senior program committee for the \"AI for Social Impact\" track (2020 - 2023) and the main track (2022) of the conference.
+I served on the senior program committee for the "AI for Social Impact" track (2020 - 2023) and the main track (2022) of the conference.
