--- a/data/blog/Sustainable-Development-Goals.mdx
+++ b/data/blog/Sustainable-Development-Goals.mdx
@@ -6,10 +6,10 @@ tags: ["Sustainable Development Goals", "Climate", "Biodiversity", "Contributed"
 icon: FaUser
 ---
 
-<a href="https://ai.xprize.org/news/blog/collaborating-ai-planetary-stewardship">
+<a href="https://www.xprize.org/prizes/artificial-intelligence/articles/collaborating-with-ai-on-planetary-stewardship">
   <img alt="An image of the sustainable development goals blog post" src="/static/images/blog/content/SDGCover-small.png" title="Image of Sustainable Development Goals blog post" />
 </a>
 
 In the run up to the [AI for Good Global Summit](http://www.itu.int/en/ITU-T/AI/Pages/201706-default.aspx), the [XPRIZE Foundation](https://www.xprize.org/) asked for my thoughts on how artificial intelligence can address 3 [Sustainable Development Goals](http://www.un.org/sustainabledevelopment/sustainable-development-goals/) (SDGs).
 
-You can [read the complete piece](https://ai.xprize.org/news/blog/collaborating-ai-planetary-stewardship) at the XPRIZE website.
+You can [read the complete piece](https://www.xprize.org/prizes/artificial-intelligence/articles/collaborating-with-ai-on-planetary-stewardship) at the XPRIZE website.
