--- a/data/cv/Papers/1SMAC.mdx
+++ b/data/cv/Papers/1SMAC.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Fast Optimization of Wildfire Suppression Policies with SMAC"
-citation: "McGregor, Sean, et al. "Fast optimization of wildfire suppression policies with SMAC." arXiv preprint arXiv:1703.09391 (2017)."
+citation: "McGregor, Sean, et al. \"Fast optimization of wildfire suppression policies with SMAC.\" arXiv preprint arXiv:1703.09391 (2017)."
 authors: McGregor, S., Houtman, R., Montgomery, C., Metoyer, R., & Dietterich, T. G.
 paper: https://arxiv.org/abs/1703.09391
 venue: arXiv
